--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-NODE_MAILER_EMAIL=
-NODE_MAILER_GMAIL_APP_PASSWORD=
+NODE_MAILER_EMAIL=webseriesmovie312@gmail.com
+NODE_MAILER_GMAIL_APP_PASSWORD=iesa uzit fbnf iwlg
 
 NEXT_PUBLIC_PUSHER_APP_CLUSTOR=
 NEXT_PUBLIC_PUSHER_APP_SECRET=
 NEXT_PUBLIC_PUSHER_APP_KEY=
 NEXT_PUBLIC_PUSHER_APP_ID=
 
-OPEN_AI_KEY=
+OPEN_AI_KEY=sk-proj-63vlxTkEgmZseXPzd9QDT3BlbkFJTOUzyUw8PkhSmotiVBop
 
 NEXT_PUBLIC_UPLOAD_CARE_PUBLIC_KEY=3cb3e6725db8a0ebad80
 UPLOAD_CARE_SECRET_KEY=4040a44451029a728f19
@@ -17,8 +17,8 @@ CLERK_SECRET_KEY=sk_test_k16dxTkftE04z8VUYmXiSx6I2JRGx3bLRr2OXuhkaf
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
 
-STRIPE_SECRET=
-NEXT_PUBLIC_STRIPE_PUBLISH_KEY=
+# STRIPE_SECRET=
+# NEXT_PUBLIC_STRIPE_PUBLISH_KEY=
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
