--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@remixicon/react": "^4.2.0",
     "@stripe/react-stripe-js": "^2.7.1",
     "@stripe/stripe-js": "^3.4.1",
     "@types/nodemailer": "^6.4.15",
@@ -66,7 +67,10 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
+    "remixicon": "^4.3.0",
+    "remixicon-react": "^1.0.0",
     "sonner": "^1.4.41",
     "stripe": "^15.8.0",
     "tailwind-merge": "^2.3.0",
