--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
+    "groq-sdk": "^0.5.0",
     "html-react-parser": "^5.1.10",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
