--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.2",
+    "framer-motion": "^11.3.2",
     "groq-sdk": "^0.5.0",
     "html-react-parser": "^5.1.10",
     "input-otp": "^1.2.4",
@@ -71,12 +72,14 @@
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.2.1",
     "react-resizable-panels": "^2.0.19",
+    "react-simple-typewriter": "^5.0.1",
     "remixicon": "^4.3.0",
     "remixicon-react": "^1.0.0",
     "sonner": "^1.4.41",
     "stripe": "^15.8.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0",
     "vaul": "^0.9.0",
     "zod": "^3.23.6"
   },
