--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.2.7",
+    "@clerk/clerk-sdk-node": "^5.0.15",
     "@clerk/nextjs": "4.29.12",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.4",
