--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.13",
