--- a/.env
+++ b/.env
@@ -31,5 +31,5 @@ DATABASE_URL=postgresql://neondb_owner:ZDtzHCQx76Xv@ep-rapid-shadow-a5yggjkt.us-
 
 # CLOUDWAYS_POSTS_URL=rr
 # CLOUDWAYS_FEATURED_IMAGES_URL=
-# CLOUDWAYS_UPLOADS_URL=rrr
+# CLOUDWAYS_UPLOADS_URL=r
 # CLOUDWAYS_USERS_URL=bhrigu
