--- a/.env
+++ b/.env
@@ -33,3 +33,4 @@ DATABASE_URL=postgresql://neondb_owner:ZDtzHCQx76Xv@ep-rapid-shadow-a5yggjkt.us-
 # CLOUDWAYS_FEATURED_IMAGES_URL=
 # CLOUDWAYS_UPLOADS_URL=rt
 # CLOUDWAYS_USERS_URL=
+uhbnij
