--- a/.env
+++ b/.env
@@ -17,8 +17,8 @@ CLERK_SECRET_KEY=sk_test_k16dxTkftE04z8VUYmXiSx6I2JRGx3bLRr2OXuhkaf
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
 
-# STRIPE_SECRET=
-# NEXT_PUBLIC_STRIPE_PUBLISH_KEY=
+# STRIPE_SECRET=sk_test_51ABCDEfghijklmnopqrstuvwxyz0123456789ABCDEFGHIJKLMNOP
+# NEXT_PUBLIC_STRIPE_PUBLISH_KEY=pk_test_51ABCDEfghijklmnopqrstuvwxyz0123456789ABCDEFGHIJKLMNOP
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -27,7 +27,7 @@ NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL=postgresql://neondb_owner:ZDtzHCQx76Xv@ep-rapid-shadow-a5yggjkt.us-east-2.aws.neon.tech/neondb?sslmode=require
+DATABASE_URL=postgresql://neondb_owner:uQGyzo2pj7Li@ep-green-band-a5xrun7t.us-east-2.aws.neon.tech/neondb?sslmode=require
 
 # CLOUDWAYS_POSTS_URL=r
 # CLOUDWAYS_FEATURED_IMAGES_URL=fbdb
