--- a/.env
+++ b/.env
@@ -17,8 +17,8 @@ CLERK_SECRET_KEY=sk_test_k16dxTkftE04z8VUYmXiSx6I2JRGx3bLRr2OXuhkaf
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/auth/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/auth/sign-up
 
-# STRIPE_SECRET=sk_test_51ABCDEfghijklmnopqrstuvwxyz0123456789ABCDEFGHIJKLMNOP
-# NEXT_PUBLIC_STRIPE_PUBLISH_KEY=pk_test_51ABCDEfghijklmnopqrstuvwxyz0123456789ABCDEFGHIJKLMNOP
+ STRIPE_SECRET=
+ NEXT_PUBLIC_STRIPE_PUBLISH_KEY=
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
