--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NEXT_PUBLIC_PUSHER_APP_KEY=8d1e16acd432ba3a2f70
 NEXT_PUBLIC_PUSHER_APP_ID=1833272
 
 OPEN_AI_KEY=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
-cdmjgjjyjbhrigu
+cdmjgj
 NEXT_PUBLIC_UPLOAD_CARE_PUBLIC_KEY=3cb3e6725db8a0ebad80
 UPLOAD_CARE_SECRET_KEY=4040a44451029a728f19
 
