--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ NEXT_PUBLIC_PUSHER_APP_ID=1833272
 OPEN_AI_KEY=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
 
 NEXT_PUBLIC_UPLOAD_CARE_PUBLIC_KEY=3cb3e6725db8a0ebad80
-UPLOAD_CARE_SECRET_KEY=4040a44451029a728f19  uhuhi
+UPLOAD_CARE_SECRET_KEY=4040a44451029a728f19  uhuh
 
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_ZW5qb3llZC1qYXZlbGluLTY3LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_k16dxTkftE04z8VUYmXiSx6I2JRGx3bLRr2OXuhkaf
